Minor fixes on style and resource

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "My Affiliate",
+  "name": "MummyMonetize",
   "description": "Django App.",
   "image": "heroku/python",
   "repository": "https://github.com/goldminer1030/django-affiliate-marketing",
