--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+dj-database-url==0.5.0
 Django==2.2.6
+django-bootstrap-modal-forms==1.4.4
+django-heroku==0.3.1
 django-widget-tweaks==1.4.5
+gunicorn==19.9.0
+psycopg2==2.8.4
 pytz==2019.3
 sqlparse==0.3.0
-gunicorn
-django-heroku
+whitenoise==4.1.4
